--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       </div>
     </header>
 
-    <div class="backdrop is-hidden" data-menu>
-    <div class="mobilemodal" >
+    <!-- <div class="backdrop is-hidden" data-menu> -->
+    <div class="mobilemodal is-hidden" data-menu>
       <button data-menu-close class="mobilemodal__button" type="button">
         <svg class="mobilemodal__close" width="40" height="40">
           <use href="./images/sprite.svg#icon-modalclose"></use>
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
     <!-- Герой -->
     <section class="hero">
       <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
