without hope hope

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
 
     <!-- Модальне вікно -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
                <button class="close" data-modal-close>
             <svg class="close__ellipse" width="30" height="30">
@@ -474,7 +474,7 @@
           </form>
        
         </div>
-    </div>
+    </div> -->
 
     <!-- Футер -->
     <footer class="footer">
